--- a/index.html
+++ b/index.html
@@ -1,22 +1,80 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-	<title>COP 4331 LAMP Stack Demo</title>
-	<script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Contact Manager - Login</title>
+	<!-- Bootstrap-->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link rel="stylesheet" href="../css/styles.css">
+
 </head>
+
 <body>
 
-<h1 id="title">COP 4331 LAMP Stack Demo</h1>
 
-<div id="loginDiv">
-	<span id="inner-title">PLEASE LOG IN</span>
-	<input type="text" id="loginName" placeholder="Username" /><br />
-	<input type="password" id="loginPassword" placeholder="Password"/><br />
-	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button>
-	<span id="loginResult"></span>
-</div>
+	<div class="container">
+		<h2 class="text-center my-4">Login to Contact Manager</h2>
+		<div class="row justify-content-center">
+			<div class="col-md-20"> 
+				<!-- Login Form --> 
+				<form id="login-form" class="border p-4 rounded">
+
+				<!-- Toggle to Registration --> 
+				<p class="text-center my-3">Don't have an account? <a href="#" id="show-register">Register here</a></p>
+
+					<div class="form-group">
+						<label for="login-username">Username:</label>
+						<input type="text" id="login-username" name="username" class="form-control" required>
+					</div>
+					<div class="form-group">
+						<label for="login-password">Password:</label>
+						<input type="password" id="login-password" name="password" class="form-control" required>
+					</div>
+					<button type="button" class="btn btn-primary btn-block" onclick="login()">Login</button>
+				</form>
+
+			
+
+			
+				<!-- Register Form (Hidden Initially) -->
+				 
+				<form id="register-form" class="border p-4 rounded" style="display:none;">
+					<h3 class="text-center my-4">Register</h3>
+					<div class="form-group">
+						<label for="first-name">First Name:</label>
+						<input type="text" id="first-name" name="first_name" class="form-control" required>
+					</div>
+					<div class="form-group">
+						<label for="last-name">Last Name:</label>
+						<input type="text" id="last-name" name="last_name" class="form-control" required>
+					</div>
+					<div class="form-group">
+						<label for="register-username">Username:</label>
+						<input type="text" id="register-username" name="username" class="form-control" required>
+					</div>
+					<div class="form-group">
+						<label for="register-password">Password:</label>
+						<input type="password" id="register-password" name="password" class="form-control" required>
+					</div>
+					<button type="button" class="btn btn-success btn-block" onclick="register()">Register</button>
+					<p class="text-center my-4">Return to login. <a href="#" id="show-login">Click here</a></p>
+				</form>
+
+			</div>
+		</div>
+	</div>
+
+
+	<!-- Scripts -->
+	<!--
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	-->
+	<script src="../js/code.js"></script>
 
 </body>
+
 </html>
