--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,16 @@
     </div>
 
 
-	<script src="../js/code.js"></script>
+
+    <script>
+        // Add event listener for logout button
+        document.getElementById("logoutBtn").addEventListener("click", function() {
+            // Redirect back to the login page
+            window.location.href = "index.html";
+        });
+    </script>
+
+
 
     <!-- Bootstrap Stuff 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
