--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
     <title>Contact Manager</title>
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+     <script src="../js/code.js" async></script>
 </head>
 <body>
 
@@ -14,7 +15,43 @@
         <button id="logoutBtn" class="btn btn-danger">Logout</button>
     </div>
 
+    <!-- Adding new contacts -->
+    <div class="container mt-4">
+        <h2>Add New Contact</h2>
+        <div class="row mb-3">
+            <div class="col">
+                <input type="text" id="contact-name" class="form-control" placeholder="Enter Name">
+            </div>
+            <div class="col">
+                <input type="text" id="contact-phone" class="form-control" placeholder="Enter Phone Number">
+            </div>
+            <div class="col">
+                <input type="email" id="contact-email" class="form-control" placeholder="Enter Email">
+            </div>
+            <div class="col">
+                <button type="button" id="addContactButton" class="btn btn-success" onclick="addContact();">Add Contact</button>
+            </div>
+        </div>
+        <span id="contactAddResult"></span>
+    </div>
 
+    <div class="container mt-4">
+        <h3>Contacts</h3>
+
+        <!--List of contacts-->
+        <table class="table table-striped" id="contacts-table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Phone</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody id="contacts-body">
+                <!--Content goes here, I think...-->
+            </tbody>
+        </table>
+    </div>
 
     <script>
         // Add event listener for logout button
