--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
 					<div class="form-group">
 						<label for="login-username">Username:</label>
-						<input type="text" id="login-username" name="username" class="form-control" required>
+						<input type="text" id="login-username" name="username" class="form-control" placeholder="Enter Username" required>
 					</div>
 					<div class="form-group">
 						<label for="login-password">Password:</label>
-						<input type="password" id="login-password" name="password" class="form-control" required>
+						<input type="password" id="login-password" name="password" class="form-control" placeholder="Enter Password" required>
 					</div>
 					<button type="button" class="btn btn-primary btn-block" onclick="login()">Login</button>
 				</form>
@@ -45,19 +45,19 @@
 					<h3 class="text-center my-4">Register</h3>
 					<div class="form-group">
 						<label for="first-name">First Name:</label>
-						<input type="text" id="first-name" name="first_name" class="form-control" required>
+						<input type="text" id="first-name" name="first_name" class="form-control" placeholder="Enter First Name" required>
 					</div>
 					<div class="form-group">
 						<label for="last-name">Last Name:</label>
-						<input type="text" id="last-name" name="last_name" class="form-control" required>
+						<input type="text" id="last-name" name="last_name" class="form-control" placeholder="Enter Last Name" required>
 					</div>
 					<div class="form-group">
 						<label for="register-username">Username:</label>
-						<input type="text" id="register-username" name="username" class="form-control" required>
+						<input type="text" id="register-username" name="username" class="form-control" placeholder="Enter Username" required>
 					</div>
 					<div class="form-group">
 						<label for="register-password">Password:</label>
-						<input type="password" id="register-password" name="password" class="form-control" required>
+						<input type="password" id="register-password" name="password" class="form-control" placeholder="Enter Password" required>
 					</div>
 					<button type="button" class="btn btn-success btn-block" onclick="register()">Register</button>
 					<p class="text-center my-4">Return to login. <a href="#" id="show-login">Click here</a></p>
