--- a/contacts.html
+++ b/contacts.html
@@ -1,35 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Manager</title>
-     <!-- Bootstrap CSS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="../js/contactsCode.js" async></script>
+    <script src="../js/code.js" async></script>
 </head>
+
 <body>
 
     <div class="container text-center">
         <h3 class="my-4">Contact Manager</h3>
-        <button id="logoutBtn" class="btn btn-danger">Logout</button>
+        <button onclick="logout()" class="btn btn-danger">Logout</button>
     </div>
 
+    <!-- Adding new contacts -->
+    <div class="container mt-4">
+        <h2>Add New Contact</h2>
+        <div class="row mb-3">
+            <div class="col">
+                <input type="text" id="contact-name" class="form-control" placeholder="Enter Name">
+            </div>
+            <div class="col">
+                <input type="text" id="contact-phone" class="form-control" placeholder="Enter Phone Number">
+            </div>
+            <div class="col">
+                <input type="email" id="contact-email" class="form-control" placeholder="Enter Email">
+            </div>
+            <div class="col">
+                <button type="button" id="addContactButton" class="btn btn-success" onclick="addContact();">Add
+                    Contact</button>
+            </div>
+        </div>
+        <span id="contactAddResult"></span>
+    </div>
+    <div class="container mt-4">
+        <h3>Contacts</h3>
 
+        <!--List of contacts-->
+        <table class="table table-striped" id="contacts-table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Phone</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody id="contacts-body">
+                <!--Content goes here.-->
+            </tbody>
+        </table>
+    </div>
 
-    <script>
-        // Add event listener for logout button
-        document.getElementById("logoutBtn").addEventListener("click", function() {
-            // Redirect back to the login page
-            window.location.href = "index.html";
-        });
-    </script>
-
-
-
-    <!-- Bootstrap Stuff 
+    <!-- Bootstrap Stuff -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    -->
-    
+
+
 </body>
+
 </html>
