--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="../js/contactsCode.js" async></script>
-    <script src="../js/code.js" async></script>
+
 </head>
 
 <body>
@@ -19,30 +19,66 @@
         <button onclick="logout()" class="btn btn-danger">Logout</button>
     </div>
 
-    <!-- Adding new contacts -->
-    <div class="container mt-4">
-        <h2>Add New Contact</h2>
-        <div class="row mb-3">
-            <div class="col">
-                <input type="text" id="contact-name" class="form-control" placeholder="Enter Name">
-            </div>
-            <div class="col">
-                <input type="text" id="contact-phone" class="form-control" placeholder="Enter Phone Number">
-            </div>
-            <div class="col">
-                <input type="email" id="contact-email" class="form-control" placeholder="Enter Email">
-            </div>
-            <div class="col">
-                <button type="button" id="addContactButton" class="btn btn-success" onclick="addContact();">Add Contact</button>
+<!-- Tab SEARCH ADD -->
+<div class="container mt-4">
+    <ul class="nav nav-tabs" id="contactTab" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="add-contact-tab" data-bs-toggle="tab" href="#add-contact" role="tab"
+                aria-controls="add-contact" aria-selected="true">Add New Contact</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="search-contact-tab" data-bs-toggle="tab" href="#search-contact" role="tab"
+                aria-controls="search-contact" aria-selected="false">Search Contacts</a>
+        </li>
+    </ul>
+
+    <!-- Tab Content -->
+    <div class="tab-content" id="contactTabContent">
+        <!-- ADD CONTACT -->
+        <div class="tab-pane fade show active" id="add-contact" role="tabpanel" aria-labelledby="add-contact-tab">
+            <div class="container mt-4">
+                <h2>Add New Contact</h2>
+                <div class="row mb-3">
+                    <div class="col">
+                        <input type="text" id="contact-name" class="form-control" placeholder="Enter Name">
+                    </div>
+                    <div class="col">
+                        <input type="text" id="contact-phone" class="form-control" placeholder="Enter Phone Number">
+                    </div>
+                    <div class="col">
+                        <input type="email" id="contact-email" class="form-control" placeholder="Enter Email">
+                    </div>
+                    <div class="col">
+                        <button type="button" id="addContactButton" class="btn btn-success"
+                            onclick="addContact();">Add Contact</button>
+                    </div>
+                </div>
+                <span id="contactAddResult"></span>
             </div>
         </div>
-        <span id="contactAddResult"></span>
-    </div>
 
+        <!-- SEARCH CONTACT -->
+        <div class="tab-pane fade" id="search-contact" role="tabpanel" aria-labelledby="search-contact-tab">
+            <div class="container mt-4">
+                <h2>Search Contacts</h2>
+                <div class="row mb-3">
+                    <div class="col">
+                        <input type="text" id="search-input" class="form-control" placeholder="Search by Name">
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-primary" onclick="searchContacts();">Search</button>
+                        <button type="button" class="btn btn-primary" onclick="reloadPage();">View All Contacts</button>
+                    </div>
+                </div>
+                <span id="searchResult"></span>
+            </div>
+        </div>
+    </div>
+</div>
+
+    <!--List of contacts-->
     <div class="container mt-4">
         <h3>Contacts</h3>
-
-        <!--List of contacts-->
         <table class="table table-striped" id="contacts-table">
             <thead>
                 <tr>
@@ -52,17 +88,17 @@
                 </tr>
             </thead>
             <tbody id="contacts-body">
-                <!--Content goes here.-->
+                <!--Contacts appear here-->
             </tbody>
         </table>
     </div>
 
     <!-- Bootstrap Stuff -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 
 
 </body>
 
-</html>
+</html> 
