fixed error message not disappearing when switching from login to register page

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 
 	<div class="container">
-		<h2 class="text-center my-4">Login to Contact Manager</h2>
 		<div class="row justify-content-center">
 			<div class="col-md-20">
 				<!-- Login Form -->
 				<form id="login-form" class="border p-4 rounded">
+					<h3 class="text-center my-4">Login to Contact Manager</h2>
 
 					<!-- Toggle to Registration -->
 					<p class="text-center my-3">Don't have an account? <a href="#" id="show-register">Register here</a>
@@ -48,7 +48,8 @@
 
 				<!--Form-->
 				<form id="register-form" class="border p-4 rounded" style="display:none;">
-					<h3 class="text-center my-4">Register</h3>
+					<h3 class="text-center my-4">Register For Contact Manager</h2>
+					
 					<div class="form-group">
 						<label for="first-name">First Name:</label>
 						<input type="text" id="first-name" name="first_name" class="form-control"
