--- a/contacts.html
+++ b/contacts.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="../js/contactsCode.js" async></script>
+    <script src="../js/contactsCode.js"></script>
 
 </head>
 
@@ -49,7 +49,7 @@
                         <input type="email" id="contact-email" class="form-control" placeholder="Enter Email">
                     </div>
                     <div class="col">
-                        <button type="button" id="addContactButton" class="btn btn-success"
+                        <button type="button" id="addContactButton" class="btn btn-primary"
                             onclick="addContact();">Add Contact</button>
                     </div>
                 </div>
