--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/styles.css">
-	<script src="../js/code.js" async></script>
+	<script src="../js/code.js"></script>
 </head>
 
 <body>
@@ -23,9 +23,6 @@
 					<h3 class="text-center my-4">Login to Contact Manager</h2>
 
 					<!-- Toggle to Registration -->
-					<p class="text-center my-3">Don't have an account? <a href="#" id="show-register">Register here</a>
-					</p>
-
 					<div class="form-group">
 						<label for="login-username">Username:</label>
 						<input type="text" id="login-username" name="username" class="form-control"
@@ -37,15 +34,14 @@
 							placeholder="Enter Password" required>
 					</div>
 					<button type="button" class="btn btn-primary btn-block" id="login-btn">Login</button>
+					<p class="text-center my-3">Don't have an account? <a href="#" id="show-register">Register here</a>
+					</p>
 				</form>
 
 
 
 
 				<!-- Register Form (Hidden Initially) -->
-				<!--error box-->
-				<div id="error-box" class="alert alert-danger" style="display:none;"></div>
-
 				<!--Form-->
 				<form id="register-form" class="border p-4 rounded" style="display:none;">
 					<h3 class="text-center my-4">Register For Contact Manager</h2>
@@ -70,9 +66,12 @@
 						<input type="password" id="register-password" name="password" class="form-control"
 							placeholder="Enter Password" required>
 					</div>
-					<button type="button" class="btn btn-success btn-block" id="register-btn">Register</button>
+					<button type="button" class="btn btn-primary btn-block" id="register-btn">Register</button>
 					<p class="text-center my-4">Return to login. <a href="#" id="show-login">Click here</a></p>
 				</form>
+
+				<!--error box-->
+				<div id="error-box" class="alert alert-danger" style="display:none;"></div>
 
 			</div>
 		</div>
