--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
 				<!--error box-->
 				<div id="error-box" class="alert alert-danger" style="display:none;"></div>
+				<div id="message-box" class="alert alert-success" style="display:none;"></div>
 
 			</div>
 		</div>
